# domio

./: .pre-commit-config.yaml  README.rst  config.toml  domio.service  domotik.service  linky.service  pyproject.toml  python3-domotik.service  requirements.txt  setup.py
backup/: automations.yaml  configuration.yaml  zigbee2mqtt.service
docs/: README.rst  zigbee2mqtt.service
domotik/: bmp180.py  bmp280.py  config.py  doorbell.py  i2c.py  linky.py  main.py  typem.py  ups.py  utils.py
linky/: main.py  tic.py
src/: bmp180.py  bmp280.py  config.py  doorbell.py  linky.py  main.py  typem.py  ups.py
src/domio/: bmp180.py  bmp280.py  canio.py  config.py  doorbell.py  gpio.py  i2c.py  linky.py  logger.py  main.py  typem.py  ups.py  utils.py
src/domotik/: bmp180.py  bmp280.py  config.py  doorbell.py  i2c.py  linky.py  main.py  ups.py
