[project]
name = "domio"
dynamic = ["version"]
description = "Read Linky serial data and more."
authors = [{ name = "Franck Barbenoire", email = "fbarbenoire@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.18",
    "aiomqtt==2.3.2",
    "pyserial-asyncio==0.6"
]
license = "GPL-3.0-or-later"
keywords = ["home automation", "mqtt", "pigpio"]

[project.urls]
Homepage = "https://github.com/domotik-or/domio"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
domio = "domio.main:main"

[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "domio.main.__version__"}
