[project]
name = "domio"
dynamic = ["version"]
description = "Read Linky serial data and more."
authors = [{ name = "Franck Barbenoire", email = "fbarbenoire@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.18",
    "aiomqtt==2.3.2",
    "pyserial-asyncio==0.6"
]
# license = "GPL-3.0-or-later"
keywords = ["home automation", "mqtt", "pigpio"]

[project.urls]
Homepage = "https://github.com/domotik-or/domio"

[build-system]
requires = ["flit_core >=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
domio = "domio.main:main"

[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
