[project]
name = "domio"
dynamic = ["version"]
description = "Read Linky serial data and more."
authors = [{ name = "Franck Barbenoire", email = "fbarbenoire@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.2",  # upgraded from meta-openembedded recipe
    "aiomqtt==2.4.0",
    "gpiod==2.4.0",  # upgraded from meta-openembedded recipe
    "python-can==4.6.1"  # upgraded from meta-openembedded recipe
]
# license = "GPL-3.0-or-later"
keywords = ["home automation", "mqtt", "gpiod"]

[project.urls]
Homepage = "https://github.com/domotik-or/domio"

[build-system]
requires = ["flit_core >=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
domio = "domio.main:main"

[tool.mypy]
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
